--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
   
   <body>
    
-    <h1>hello world</h1>
-
+    <marquee><h1>hello world</h1></marquee>
+      <hr>
         <h2> brooke shary</h2>
-    
+     
   </body>
 </html>
