--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
   
   <body>
    
-    <marquee><h1>hello world</h1></marquee>
+    <marquee><h1>hello world, it's brooke</h1></marquee>
       <hr>
-        <h2> brooke shary</h2>
      
   </body>
 </html>
