--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -39,8 +39,9 @@
                                 <p class="to-do">– Introduction<br>– Five Word Exercise<br>– Sharing portfolio examples and Five Words<br>– Typography Lecture<br>– INDD Fundamentals<br>– In-Class Work Time<br></p>
                                 <p><span class="due">Due Today: 3 Portfolio Examples</span></p>
                                 <p><span class="homework">Homework: <br>(1) <a href="https://drive.google.com/drive/folders/1Zn7B1PRyld132WcgCL8yqcExr_UJ8x0l?usp=sharing" target="_blank">Typeface Pairing Exercise</a> 
-                                    <br> (2) <a href="https://drive.google.com/drive/folders/19jgDm4EGpIR7GAgcPf0Zxo8-iNEYRjKQ?usp=sharing" target="_blank">Hierarchy and Composition Exercise</a>
-                                    <br> (3) Begin gathering your projects/images</span></p>
+                                    <br> (2) <a href="https://drive.google.com/file/d/11MoAvWsZd_RTcmjdOFPrV5tjqWqVxcG3/view?usp=drive_link" target="_blank">Typesetting Exercise</a>
+                                    <br> (3) <a href="https://drive.google.com/file/d/1tpj7o7F30Gn4rQGHQybiu5AIFxiMEHzB/view?usp=drive_link" target="_blank">Hierarchy and Composition Exercise</a>
+                                    <br> (4) Begin gathering your projects/images</span></p>
                                 <p class="dd">Daily Designers (Visual Systems): <a href="https://readymag.com/flatfile/08-teddymat/" target="_blank">Karl Gerstner</a>, <a href="https://www.studioairport.nl/" target="_blank">Studio Airport</a>, <a href="https://www.pentagram.com/work/discipline/brand-identity" target="_blank">Pentagram</a></p>
                             </div>
                         </div>
@@ -186,7 +187,7 @@
             <div class="info-container">
                 <div class="intro">
                     <h2>Class Resources</h2>
-                    <p class="max25vw">Below is a list of links and references that should help you out</p>
+                    <p class="max25vw">Below is a list of links and references that will be useful throughout the class, this list will be updated as we go.</p>
                 </div>
                 <div>
                     <img class="dot" src="svg/crop-icon_focus-02.svg"/>
@@ -198,11 +199,10 @@
                             <li><a href="https://join.slack.com/t/intarportfoli-7mj3740/shared_invite/zt-29fh6n97r-azuysshkT8D9gDEeHOZBxw" target="_blank">Class Slack</a></li>
                             <li><s>Class Zoom Link (only active when used)</s></li>
                             <li>Class Syllabus PDF</li>
-                            <li><a href="https://drive.google.com/drive/folders/1g9E4ML2Rm-9aGWDgHxlSelTtbuci13Cl?usp=sharing" target="_blank">Class Google Drive</a></li>
-                            <li><a href="https://drive.google.com/drive/folders/1GLo6oN9UDvsDea1kOPqbzekE8k7RlTIL?usp=sharing" target="_blank">File Submission and Guidelines</a></li>
+                            <li><a href="https://drive.google.com/drive/folders/1H48_kN_hOXFMD8uYvzA4b98pbQP9mu1F?usp=drive_link" target="_blank">Class Google Drive</a></li>
                             <li><a href="https://static1.squarespace.com/static/5979f27e579fb3cca0a88824/t/62ebddf23a42b82a5195a816/1659624947145/Resumes+and+Cover+Letters.pdf">A&L Resume and Cover Letter Guides</a></li>
                             <li><a href="https://careercenter.risd.edu/" target="_blank">RISD Career Center</a></li>
-                            <li><a href="https://careercenter.risd.edu/resume-cv" target="_blank">Career Center Resumes/CV</a></li>                            
+                            <li><a href="https://careercenter.risd.edu/resume-cv" target="_blank">RISD Career Center Resumes/CV</a></li>                            
                             <li><a href="https://artsandlanguage.risd.edu/" target="_blank">RISD A&L</a></li>
                             <li><a href="https://www.adobe.com/acrobat/online/compress-pdf.html" target="_blank">Online PDF Compression: Adobe Acrobat</a></li>
                             <li><a href="https://mixam.com/" target="_blank">Mixam</a></li>
@@ -211,46 +211,28 @@
                     <div>
                         <h2>Class Docs and Presentations</h2>
                         <ul>
-                            <li><a href="https://www.dropbox.com/s/dsgs265vluqbore/WS_PortfolioProduction_FileStructure.pdf?dl=0" target="_blank">Recommended File Structure</a></li>
-                            <li><a href="https://drive.google.com/drive/folders/1CYW8WZ--xgsVFd1jgIRf3MCZENs1zOo_?usp=sharing" target="_blank">Selection of Portfolios from Previous Years</a></li>
-                            <li><a href="https://docs.google.com/spreadsheets/d/1VPTGwhykWr3jetDvzawp5wKnMDJU9SNVoIz_UBbzCK0/edit?usp=sharing" target="_blank">Sheet of Portfolio Examples</a></li>
-                            <li><a href="https://docs.google.com/document/d/1TINZVIN2dirvdnnCpv8EQofvcOyNlmQmJza8baP5VJ4/edit?usp=sharing" target="_blank">Five Word Exercise</a></li>
-                            <li><a href="https://drive.google.com/file/d/1jn236SJlvOMja_-S8Nz55EteXWguR_g_/view?usp=sharing" target="_blank">Presentation 01: Introduction</a></li>
-                            <li><a href="https://drive.google.com/file/d/1IudAQ9rj7-rg3YGTo6h3wEgAbbE9BcsF/view?usp=sharing" target="_blank">Presentation 02: Typography</a></li>
-                            <li><a href="https://drive.google.com/file/d/10esKPeUjHRbKNnrvtmQ1ZAP9bIFXoIYu/view?usp=sharing" target="_blank">Presentation 03: Books</a></li>
-                            <li><a href="https://drive.google.com/file/d/1B41F0VL_lBrUZNUcZVR9eD9qQlaARvGi/view?usp=sharing" target="_blank">Presentation 04: Layout</a></li>
-                            <li><a href="https://drive.google.com/file/d/17xxAgjI7dAUz3DKwA-KcxfRJqSbNpyaS/view?usp=sharing">Presentation 05: Covers</a></li>
-                            <li><a href="https://drive.google.com/file/d/1FohlAc8zNHvEzlw7N9xMBC75n6yVkB58/view?usp=sharing">Presentation 06: Resume & Cover Letter Layout</a></li>
-                            <li><a href="https://drive.google.com/drive/folders/1Zn7B1PRyld132WcgCL8yqcExr_UJ8x0l?usp=sharing" target="_blank">Exercise 01: Mixing Type</a></li>
-                            <li><a href="https://drive.google.com/drive/folders/19jgDm4EGpIR7GAgcPf0Zxo8-iNEYRjKQ?usp=sharing" target="_blank">Exercise 02: Hierarchy and Composition</a></li>
-                            <li><a href="https://drive.google.com/drive/folders/1wPBsNOJ9hajb3yU72kW20D_yS7unEJpp?usp=sharing" target="_blank">Exercise 03: Contact Sheet</a></li>
-                            <li><a href="https://drive.google.com/drive/folders/11uOjt976Glv9yOHEBjfRqQ50u1vjrBKr?usp=sharing" target="_blank">Homework Folder</a></li>
+                            <li><a href="https://drive.google.com/file/d/1D6OJPpLR8GRQ-DDbvm9g3mc-rI_oWtOu/view?usp=drive_link" target="_blank">Recommended File Structure</a></li>
+                            <li><a href="https://drive.google.com/drive/folders/1cy5hQmhVT-yPvEHYiWTNSUM_detLl_RC?usp=drive_link" target="_blank">Selection of Portfolios from Previous Years</a></li>
+                            <li><a href="https://drive.google.com/drive/folders/1QNzfHHq2UqQ-HqekR4lQWTLi8HD_Jr8p?usp=drive_link" target="_blank">Homework Folder</a></li>
                             <span class="inactive">
                             </span>
                         </ul>
                     </div>
                     <div>
-                        <h2>Tutorials</h2>
-                        <ul>
-                            <li><a href="https://www.dropbox.com/s/warb8rgixmk5rkt/WS_PortfolioProduction_Styles-Concept.pdf?dl=0" target="_blank">About Styling in INDD PDF</a></li>
-                            <li><a href="https://www.loom.com/share/b8d7ce6f1603482db5123d72d7e7d8f8" target="_blank">INDD Fundamentals</a></li>
-                            <li><a href="https://www.loom.com/share/63c3ad3a0de8454e9195a9300d555d4e" target="_blank">Contact Sheet Setup (Linking IMG in INDD)</a></li>
-                            <li><a href="https://www.loom.com/share/2c797ead66c047f8bcab83e366ccfd80" target="_blank">INDD Grids and Sketching Layouts</a></li>
-                            <li><a href="https://www.loom.com/share/44615bdd2c544f928905c215b0df246e" target="_blank">INDD Paragraph & Character Styles</a></li>
-                            <li><a href="https://www.loom.com/share/a2e98a6d1ddc45b7bca9e36371ad04b7" target="_blank">Photoshop Tutorial: Non-destructive Editing, TIFFs, Masking Objects, and Batch Editing</a></li>
-                            <li><a href="https://www.loom.com/share/3c1f03cbb15e4cf2a50e549cdd2db4ad" target="_blank">Mixam File Submission and Cover File Setup</a></li>
-                            <span class="inactive"></span>
-                        </ul>
-                    </div>
-                    <div>
                         <h2>Inspiration</h2>
                         <ul>
-                            <li><a href="https://docs.google.com/document/d/1Ewih5tBZhkKU0KKUDs3XUTr3RbK4DWy_dchuYTgQq28/edit?usp=sharing" target="_blank">Daily Designers and References</a></li>
                             <li><a href="https://fontsinuse.com/" target="_blank">Fonts In Use</a></li>
                             <li><a href="https://www.itsnicethat.com/" target="_blank">It's Nice That</a></li>
                             <li><a href="https://eyeondesign.aiga.org/" target="_blank">AIGA Eye on Design</a></li>
                             <li><a href="https://www.are.na/" target="_blank">Are.na</a></li>
                             <li><a href="https://www.pinterest.com/" target="_blank">Pinterest</a></li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h2>Tutorials</h2>
+                        <ul>
+                            TBD
+                            <span class="inactive"></span>
                         </ul>
                     </div>
                     <div>
