--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -17,7 +17,7 @@
             <div class="info-container">
                 <div class="intro">
                     <h1>Portfolio Prep and Production</h1>
-                    <p>1:10pm in CIT 304<br>Mon, Tues, and some Weds</p>
+                    <p>1:10pm in CIT 305<br>Mon, Tues, and some Weds</p>
                 </div>
                 <div class="">
                     <img class="dot" src="svg/crop-icon_reg-01.svg"/>
@@ -197,8 +197,8 @@
                         <h2 class="nsa">General Links</h2>
                         <ul>
                             <li><a href="https://join.slack.com/t/intarportfoli-7mj3740/shared_invite/zt-29fh6n97r-azuysshkT8D9gDEeHOZBxw" target="_blank">Class Slack</a></li>
-                            <li><s>Class Zoom Link (only active when used)</s></li>
-                            <li>Class Syllabus PDF</li>
+                            <li><s>Class Zoom Link</s> (only active when used)</li>
+                            <li><a href="https://join.slack.com/t/intarportfoli-7mj3740/shared_invite/zt-29fh6n97r-azuysshkT8D9gDEeHOZBxw" target="_blank">Class Syllabus</a></li>
                             <li><a href="https://drive.google.com/drive/folders/1H48_kN_hOXFMD8uYvzA4b98pbQP9mu1F?usp=drive_link" target="_blank">Class Google Drive</a></li>
                             <li><a href="https://static1.squarespace.com/static/5979f27e579fb3cca0a88824/t/62ebddf23a42b82a5195a816/1659624947145/Resumes+and+Cover+Letters.pdf">A&L Resume and Cover Letter Guides</a></li>
                             <li><a href="https://careercenter.risd.edu/" target="_blank">RISD Career Center</a></li>
@@ -206,6 +206,29 @@
                             <li><a href="https://artsandlanguage.risd.edu/" target="_blank">RISD A&L</a></li>
                             <li><a href="https://www.adobe.com/acrobat/online/compress-pdf.html" target="_blank">Online PDF Compression: Adobe Acrobat</a></li>
                             <li><a href="https://mixam.com/" target="_blank">Mixam</a></li>
+                        </ul>
+                    </div>
+
+                    <div>
+                        <h2>Inspiration</h2>
+                        <ul>
+                            <li><a href="https://fontsinuse.com/" target="_blank">Fonts In Use</a></li>
+                            <li><a href="https://www.itsnicethat.com/" target="_blank">It's Nice That</a></li>
+                            <li><a href="https://eyeondesign.aiga.org/" target="_blank">AIGA Eye on Design</a></li>
+                            <li><a href="https://www.eyemagazine.com/" target="_blank">Eye Magazine</a></li>
+                            <li><a href="https://www.typewolf.com/" target="_blank">Typewolf</a></li>
+                            <li><a href="https://www.designspiration.com/" target="_blank">Designspiration</a></li>
+                            <li><a href="https://type-01.com/" target="_blank">Type 01</a></li>
+                            <li><a href="https://www.are.na/" target="_blank">Are.na</a></li>
+                            <li><a href="https://www.pinterest.com/" target="_blank">Pinterest</a></li>
+
+                        </ul>
+                    </div>
+                    <div>
+                        <h2>Tutorials</h2>
+                        <ul>
+                            TBD
+                            <span class="inactive"></span>
                         </ul>
                     </div>
                     <div>
@@ -218,32 +241,17 @@
                             </span>
                         </ul>
                     </div>
-                    <div>
-                        <h2>Inspiration</h2>
-                        <ul>
-                            <li><a href="https://fontsinuse.com/" target="_blank">Fonts In Use</a></li>
-                            <li><a href="https://www.itsnicethat.com/" target="_blank">It's Nice That</a></li>
-                            <li><a href="https://eyeondesign.aiga.org/" target="_blank">AIGA Eye on Design</a></li>
-                            <li><a href="https://www.are.na/" target="_blank">Are.na</a></li>
-                            <li><a href="https://www.pinterest.com/" target="_blank">Pinterest</a></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h2>Tutorials</h2>
-                        <ul>
-                            TBD
-                            <span class="inactive"></span>
-                        </ul>
-                    </div>
+
                     <div>
                         <h2>Type Foundries</h2>
                         <ul>
-                            <li><a href="https://drive.google.com/drive/folders/1vwH-Yd0-1pxSw61hSwvfbBJ32uJfUZ55?usp=sharing" target="_blank">INTAR Starter Pack</a></li>
+                            <li><a href="https://drive.google.com/file/d/1gl4SFknZuxHngxUbOo2-dVp8GBsQdqII/view?usp=drive_link" target="_blank">INTAR Starter Pack</a></li>
                             <li><a href="https://fonts.adobe.com/" target="_blank">Adobe Fonts</a></li>
                             <li><a href="https://www.colophon-foundry.org/typefaces/" target="_blank">Colophon</a></li>
                             <li><a href="https://commercialtype.com/" target="_blank">Commercial Type</a></li>
                             <li><a href="https://goodtypefoundry.com/" target="_blank">Good Type Foundry</a></li>
                             <li><a href="hthttps://www.grillitype.com/free-trial-fonts" target="_blank">Grilli Type</a></li>
+                            <li><a href="https://abcdinamo.com/" target="_blank">Dinamo</a></li>
                             <li><a href="https://klim.co.nz/" target="_blank">Klim</a></li>
                             <li><a href="https://pangrampangram.com/" target="_blank">Pangram Pangram</a></li>
                         </ul>
