Link Update (Syllabus)

--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -198,7 +198,7 @@
                         <ul>
                             <li><a href="https://join.slack.com/t/intarportfoli-7mj3740/shared_invite/zt-29fh6n97r-azuysshkT8D9gDEeHOZBxw" target="_blank">Class Slack</a></li>
                             <li><s>Class Zoom Link</s> (only active when used)</li>
-                            <li><a href="https://join.slack.com/t/intarportfoli-7mj3740/shared_invite/zt-29fh6n97r-azuysshkT8D9gDEeHOZBxw" target="_blank">Class Syllabus</a></li>
+                            <li><a href="https://drive.google.com/file/d/10LbpBmZND3WE90FD3GNET_iJ1JHA66bm/view?usp=drive_link" target="_blank">Class Syllabus</a></li>
                             <li><a href="https://drive.google.com/drive/folders/1H48_kN_hOXFMD8uYvzA4b98pbQP9mu1F?usp=drive_link" target="_blank">Class Google Drive</a></li>
                             <li><a href="https://static1.squarespace.com/static/5979f27e579fb3cca0a88824/t/62ebddf23a42b82a5195a816/1659624947145/Resumes+and+Cover+Letters.pdf">A&L Resume and Cover Letter Guides</a></li>
                             <li><a href="https://careercenter.risd.edu/" target="_blank">RISD Career Center</a></li>
