--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -36,13 +36,12 @@
                         </div>
                         <div class="class-info hide">
                             <div>
-                                <p class="to-do">– Introduction<br>– Five Word Exercise<br>– Sharing portfolio examples and Five Words<br>– Typography Lecture<br>– INDD Fundamentals<br>– In-Class Work Time<br></p>
-                                <p><span class="due">Due Today: 3 Portfolio Examples</span></p>
+                                <p class="to-do">– Introduction<br>– Five Word Exercise<br>– Typography Lecture<br>– Sharing portfolio examples and Five Words<br>– INDD Fundamentals<br>– In-Class Work Time<br></p>
+                                <p><span class="due">Due Today: Five Word Exercise & 3 Portfolio Examples</span></p>
                                 <p><span class="homework">Homework: <br>(1) <a href="https://drive.google.com/drive/folders/1Zn7B1PRyld132WcgCL8yqcExr_UJ8x0l?usp=sharing" target="_blank">Typeface Pairing Exercise</a> 
-                                    <br> (2) <a href="https://drive.google.com/file/d/11MoAvWsZd_RTcmjdOFPrV5tjqWqVxcG3/view?usp=drive_link" target="_blank">Typesetting Exercise</a>
-                                    <br> (3) <a href="https://drive.google.com/file/d/1tpj7o7F30Gn4rQGHQybiu5AIFxiMEHzB/view?usp=drive_link" target="_blank">Hierarchy and Composition Exercise</a>
-                                    <br> (4) Begin gathering your projects/images</span></p>
-                                <p class="dd">Daily Designers (Visual Systems): <a href="https://readymag.com/flatfile/08-teddymat/" target="_blank">Karl Gerstner</a>, <a href="https://www.studioairport.nl/" target="_blank">Studio Airport</a>, <a href="https://www.pentagram.com/work/discipline/brand-identity" target="_blank">Pentagram</a></p>
+                                    <br> (2) <a href="https://drive.google.com/file/d/1tpj7o7F30Gn4rQGHQybiu5AIFxiMEHzB/view?usp=drive_link" target="_blank">Hierarchy and Composition Exercise</a>
+                                    <br> (3) Begin gathering your projects/images</span></p>
+                                <p class="dd">Daily Designers (Visual Systems): <a href="https://www.studioairport.nl/" target="_blank">Studio Airport</a>, <a href="https://www.pentagram.com/work/discipline/book-design" target="_blank">Pentagram</a></p>
                             </div>
                         </div>
                     </div>
@@ -55,9 +54,9 @@
                         </div>
                         <div class="class-info hide">
                             <div>
-                                <p class="to-do">– Books Lecture<br>– Small Group Portfolio Deconstruction<br>– INDD Tutorial: Basic Layout, Setting Grids, and Columns<br>– Introduce HW: Contact Sheet<br>– Review Exercises 1 and 2 in Small Groups of 3 and 4</p>
+                                <p class="to-do">– Books Lecture<br>– Small Group Portfolio Deconstruction<br>– INDD Tutorial: Basic Layout, Setting Grids, and Columns<br>– Typesetting Exercise <br>– Introduce HW: Contact Sheet<br>– Review Exercises 1 and 2 in Small Groups of 3 and 4</p>
                                 <p><span class="due">Due Today: Exercises 1 and 2</span></p>
-                                <p><span class="homework"><a href="https://drive.google.com/drive/folders/1wPBsNOJ9hajb3yU72kW20D_yS7unEJpp?usp=sharing" target="_blank">Homework: (1) Contact Sheet</a></span></p>
+                                <p><span class="homework">Homework:<br><a href="https://drive.google.com/file/d/1hzCADGDpG7E94N-h3EXRNVgIAac4Ib4g/view?usp=drive_link" target="_blank">(1) Contact Sheet</a><br><a href="https://drive.google.com/file/d/11MoAvWsZd_RTcmjdOFPrV5tjqWqVxcG3/view?usp=drive_link" target="_blank">(2) Typesetting Exercise</a></span></p>
                                 <p class="dd">Daily Designers (Book Designers): <a href="https://www.joostgrootens.nl/" target="_blank">Joost Grootens</a>, <a href="https://neildonnelly.net/" target="_blank">Neil Donnelly</a>, <a href="https://www.youtube.com/watch?v=KxNTkKTJaCk" target="_blank">Julia Born</a></p>
                             </div>
                         </div>
@@ -72,9 +71,9 @@
                         <div class="class-info hide">
                             <div>
                                 <p class="to-do">– Design Lecture<br>– 1:1 Contact Sheet Walkthrough</p>
-                                <p><span class="due"><a href="https://drive.google.com/drive/folders/1wPBsNOJ9hajb3yU72kW20D_yS7unEJpp?usp=sharing">Due Today: Contact Sheet</a></span></p>
-                                <p><span class="homework"><a href="" target="_blank">Homework: (1) <a href="https://drive.google.com/file/d/1vXnnffIz7sYDPh3AwLrTzNaBve3hHYb0/view?usp=sharing" target="_blank">3 Design Directions</a>, (2) <a href="https://drive.google.com/file/d/1RUzPdgbBTQZicXNZhsTOrypvIICY9aTN/view?usp=share_link" target="_blank">Book Map</a>, (3) <a href="https://drive.google.com/file/d/1r9yIfD-c5fvXZNgMaSruHfyu8q5RJJtV/view?usp=share_link" target="_blank">Inspiration / MoodBoard</a>. Book Map template is <a href="https://drive.google.com/drive/folders/1wjWvIaiABbKfE7uPr1qCZOLaVqtwW6OH?usp=sharing" target="_blank">here</a>.</span></p>
-                                <p class="dd">Daily Designers (Cover Designers + 1 Book Designer I Neglected!!): <a href="https://www.juliahasting.com/" target="_blank">Julia Hasting</a> at <a href="https://www.phaidon.com/store/architecture/" target="_blank">Phaidon</a>, <a href="https://bendenzer.com/Book-Covers" target="_blank">Ben Denzer</a>, <a href="https://www.petermendelsund.com/covers" target="_blank">Peter Mendelsund</a>, <a href="https://www.versobooks.com/" target="_blank">Verso Books</a></p>
+                                <p><span class="due">Due Today: Contact Sheet & Typesetting Exercise<br> </span></p>
+                                <p><span class="homework"><a href="" target="_blank">Homework: <br>(1) <a href="https://drive.google.com/file/d/1vXnnffIz7sYDPh3AwLrTzNaBve3hHYb0/view?usp=sharing" target="_blank">3 Design Directions</a><br>(2) <a href="https://drive.google.com/file/d/1RUzPdgbBTQZicXNZhsTOrypvIICY9aTN/view?usp=share_link" target="_blank">Book Map</a><br> (3) <a href="https://drive.google.com/file/d/1r9yIfD-c5fvXZNgMaSruHfyu8q5RJJtV/view?usp=share_link" target="_blank">Inspiration / MoodBoard</a><br> Book Map template is <a href="https://drive.google.com/drive/folders/1wjWvIaiABbKfE7uPr1qCZOLaVqtwW6OH?usp=sharing" target="_blank">here</a>.</span></p>
+                                <p class="dd">Daily Designers: <a href="https://www.juliahasting.com/" target="_blank">Julia Hasting</a> at <a href="https://www.phaidon.com/store/architecture/" target="_blank">Phaidon</a>, <a href="https://bendenzer.com/Book-Covers" target="_blank">Ben Denzer</a>, <a href="https://www.petermendelsund.com/covers" target="_blank">Peter Mendelsund</a>, <a href="https://www.versobooks.com/" target="_blank">Verso Books</a></p>
                             </div>
                         </div>
                     </div>
@@ -85,7 +84,7 @@
                             <div class="class-no"><h3>Class 4</h3></div>
                             <div id="button" class="button inactive-button"></div>
                         </div>
-                        <div class="class-info due note"><p>Presentation by Scott Malloy from the Career Center (TBD)</p></div>
+                        <div class="class-info due note"><p>Presentation by Scott Malloy from the Career Center</p></div>
                         <div class="class-info hide">
                         </div>
                     </div>
@@ -127,7 +126,7 @@
                             <div class="class-no"><h3>Class 8</h3></div>
                             <div id="button" class="button inactive-button"></div>
                         </div>
-                        <div class="class-info due note"><p>Portfolio Peer Review & Deconstruction</p></div>
+                        <div class="class-info due note"><p>Profolio Draft Review w/ NBBJ Guest Critics</p></div>
                         
                         <div class="class-info hide">
                         </div>
@@ -139,7 +138,7 @@
                             <div class="class-no"><h3>Class 9</h3></div>
                             <div id="button" class="button inactive-button"></div>
                         </div>
-                        <div class="class-info due note"><p>Portfolio Review Guest Critique (TBD) </p></div>
+                        <div class="class-info due note"><p>Portfolio Peer Review </p></div>
                         <div class="class-info hide">
                         </div>
                     </div>
@@ -198,7 +197,7 @@
                         <ul>
                             <li><a href="https://join.slack.com/t/intarportfoli-7mj3740/shared_invite/zt-29fh6n97r-azuysshkT8D9gDEeHOZBxw" target="_blank">Class Slack</a></li>
                             <li><s>Class Zoom Link</s> (only active when used)</li>
-                            <li><a href="https://drive.google.com/file/d/10LbpBmZND3WE90FD3GNET_iJ1JHA66bm/view?usp=drive_link" target="_blank">Class Syllabus</a></li>
+                            <li><a href="https://drive.google.com/file/d/1Kvrw6isgPuxfmprysZYbr4ZqawebX1GD/view?usp=drive_link" target="_blank">Class Syllabus</a></li>
                             <li><a href="https://drive.google.com/drive/folders/1H48_kN_hOXFMD8uYvzA4b98pbQP9mu1F?usp=drive_link" target="_blank">Class Google Drive</a></li>
                             <li><a href="https://static1.squarespace.com/static/5979f27e579fb3cca0a88824/t/62ebddf23a42b82a5195a816/1659624947145/Resumes+and+Cover+Letters.pdf">A&L Resume and Cover Letter Guides</a></li>
                             <li><a href="https://careercenter.risd.edu/" target="_blank">RISD Career Center</a></li>
