--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -38,7 +38,7 @@
                             <div>
                                 <p class="to-do">– Introduction<br>– Five Word Exercise<br>– Typography Lecture<br>– Sharing portfolio examples and Five Words<br>– INDD Fundamentals<br>– In-Class Work Time<br></p>
                                 <p><span class="due">Due Today: Five Word Exercise & 3 Portfolio Examples</span></p>
-                                <p><span class="homework">Homework: <br>(1) <a href="https://drive.google.com/drive/folders/1Zn7B1PRyld132WcgCL8yqcExr_UJ8x0l?usp=sharing" target="_blank">Typeface Pairing Exercise</a> 
+                                <p><span class="homework">Homework: <br>(1) <a href="https://drive.google.com/file/d/1Zayu-BZjprLLoP37lSMbeB95EWLacAxV/view?usp=drive_link" target="_blank">Typeface Pairing Exercise</a> 
                                     <br> (2) <a href="https://drive.google.com/file/d/1tpj7o7F30Gn4rQGHQybiu5AIFxiMEHzB/view?usp=drive_link" target="_blank">Hierarchy and Composition Exercise</a>
                                     <br> (3) Begin gathering your projects/images</span></p>
                                 <p class="dd">Daily Designers (Visual Systems): <a href="https://www.studioairport.nl/" target="_blank">Studio Airport</a>, <a href="https://www.pentagram.com/work/discipline/book-design" target="_blank">Pentagram</a></p>
