Scott Prez Update

--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -84,6 +84,7 @@
                             <div class="class-no"><h3>Class 4</h3></div>
                             <div id="button" class="button inactive-button"></div>
                         </div>
+                        <div class="class-info due note"><p>CLASS WILL START AT 1:00pm SHARP</p></div>
                         <div class="class-info due note"><p>Presentation by Scott Malloy from the Career Center</p></div>
                         <div class="class-info hide">
                         </div>
