--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -54,7 +54,7 @@
                         </div>
                         <div class="class-info hide">
                             <div>
-                                <p class="to-do">– Books Lecture<br>– Small Group Portfolio Deconstruction<br>– INDD Tutorial: Basic Layout, Setting Grids, and Columns<br>– Typesetting Exercise <br>– Introduce HW: Contact Sheet<br>– Review Exercises 1 and 2 in Small Groups of 3 and 4</p>
+                                <p class="to-do"><br>– Review Exercises 1 and 2<br>– Layout Lecture<br>– Poster Deconstruction<br>– INDD Tutorial: Basic Layout, Grids, Master Pages, Columns<br>– Typesetting Exercise <br>– Introduce HW: Contact Sheet</p>
                                 <p><span class="due">Due Today: Exercises 1 and 2</span></p>
                                 <p><span class="homework">Homework:<br><a href="https://drive.google.com/file/d/1hzCADGDpG7E94N-h3EXRNVgIAac4Ib4g/view?usp=drive_link" target="_blank">(1) Contact Sheet</a><br><a href="https://drive.google.com/file/d/11MoAvWsZd_RTcmjdOFPrV5tjqWqVxcG3/view?usp=drive_link" target="_blank">(2) Typesetting Exercise</a></span></p>
                                 <p class="dd">Daily Designers (Book Designers): <a href="https://www.joostgrootens.nl/" target="_blank">Joost Grootens</a>, <a href="https://neildonnelly.net/" target="_blank">Neil Donnelly</a>, <a href="https://www.youtube.com/watch?v=KxNTkKTJaCk" target="_blank">Julia Born</a></p>
@@ -70,9 +70,9 @@
                         </div>
                         <div class="class-info hide">
                             <div>
-                                <p class="to-do">– Design Lecture<br>– 1:1 Contact Sheet Walkthrough</p>
+                                <p class="to-do">– Books Lecture<br>– 1:1 Contact Sheet Walkthrough</p>
                                 <p><span class="due">Due Today: Contact Sheet & Typesetting Exercise<br> </span></p>
-                                <p><span class="homework"><a href="" target="_blank">Homework: <br>(1) <a href="https://drive.google.com/file/d/1vXnnffIz7sYDPh3AwLrTzNaBve3hHYb0/view?usp=sharing" target="_blank">3 Design Directions</a><br>(2) <a href="https://drive.google.com/file/d/1RUzPdgbBTQZicXNZhsTOrypvIICY9aTN/view?usp=share_link" target="_blank">Book Map</a><br> (3) <a href="https://drive.google.com/file/d/1r9yIfD-c5fvXZNgMaSruHfyu8q5RJJtV/view?usp=share_link" target="_blank">Inspiration / MoodBoard</a><br> Book Map template is <a href="https://drive.google.com/drive/folders/1wjWvIaiABbKfE7uPr1qCZOLaVqtwW6OH?usp=sharing" target="_blank">here</a>.</span></p>
+                                <p><span class="homework"><a href="" target="_blank">Homework: <br>(1) <a href="https://drive.google.com/file/d/1vXnnffIz7sYDPh3AwLrTzNaBve3hHYb0/view?usp=sharing" target="_blank">3 Design Directions</a><br>(2) <a href="https://drive.google.com/file/d/1RUzPdgbBTQZicXNZhsTOrypvIICY9aTN/view?usp=share_link" target="_blank">Book Map</a><br> (3) <a href="https://drive.google.com/file/d/1r9yIfD-c5fvXZNgMaSruHfyu8q5RJJtV/view?usp=share_link" target="_blank">Inspiration / Mood Board</a><br></span></p>
                                 <p class="dd">Daily Designers: <a href="https://www.juliahasting.com/" target="_blank">Julia Hasting</a> at <a href="https://www.phaidon.com/store/architecture/" target="_blank">Phaidon</a>, <a href="https://bendenzer.com/Book-Covers" target="_blank">Ben Denzer</a>, <a href="https://www.petermendelsund.com/covers" target="_blank">Peter Mendelsund</a>, <a href="https://www.versobooks.com/" target="_blank">Verso Books</a></p>
                             </div>
                         </div>
