--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -36,7 +36,10 @@
                         </div>
                         <div class="class-info hide">
                             <div>
-                                <p class="to-do">– Introduction<br>– Five Word Exercise<br>– Typography Lecture<br>– Sharing portfolio examples and Five Words<br>– INDD Fundamentals<br>– In-Class Work Time<br></p>
+                                <p class="to-do"><a href="https://drive.google.com/file/d/1KtzeU23QrCq5c3BkOvMUAafyZat8mkSU/view?usp=drive_link" target="_blank">– Introduction</a>
+                                    <br>– Five Word Exercise<br>
+                                    <a href="https://drive.google.com/file/d/1DQ1CKq7a7Sv1CU4QrKmWNtKVWqlSy8oA/view?usp=drive_link" target="_blank">– Typography Lecture</a>
+                                    <br>– Sharing portfolio examples and Five Words<br>– INDD Fundamentals<br>– In-Class Work Time<br></p>
                                 <p><span class="due">Due Today: Five Word Exercise & 3 Portfolio Examples</span></p>
                                 <p><span class="homework">Homework: <br>(1) <a href="https://drive.google.com/file/d/1Zayu-BZjprLLoP37lSMbeB95EWLacAxV/view?usp=drive_link" target="_blank">Typeface Pairing Exercise</a> 
                                     <br> (2) <a href="https://drive.google.com/file/d/1tpj7o7F30Gn4rQGHQybiu5AIFxiMEHzB/view?usp=drive_link" target="_blank">Hierarchy and Composition Exercise</a>
@@ -54,7 +57,9 @@
                         </div>
                         <div class="class-info hide">
                             <div>
-                                <p class="to-do"><br>– Review Exercises 1 and 2<br>– Layout Lecture<br>– Poster Deconstruction<br>– INDD Tutorial: Basic Layout, Grids, Master Pages, Columns<br>– Typesetting Exercise <br>– Introduce HW: Contact Sheet</p>
+                                <p class="to-do"><br>– Review Exercises 1 and 2<br>– Layout Lecture<br>
+                                    <a href="https://drive.google.com/file/d/11MoAvWsZd_RTcmjdOFPrV5tjqWqVxcG3/view?usp=drive_link" target="_blank">– Typesetting Exercise</a>
+                                    <br>– Poster Deconstruction<br>– INDD Tutorial: Basic Layout, Grids, Master Pages, Columns <br>– Introduce HW: Contact Sheet</p>
                                 <p><span class="due">Due Today: Exercises 1 and 2</span></p>
                                 <p><span class="homework">Homework:<br><a href="https://drive.google.com/file/d/1hzCADGDpG7E94N-h3EXRNVgIAac4Ib4g/view?usp=drive_link" target="_blank">(1) Contact Sheet</a><br><a href="https://drive.google.com/file/d/11MoAvWsZd_RTcmjdOFPrV5tjqWqVxcG3/view?usp=drive_link" target="_blank">(2) Typesetting Exercise</a></span></p>
                                 <p class="dd">Daily Designers (Book Designers): <a href="https://www.joostgrootens.nl/" target="_blank">Joost Grootens</a>, <a href="https://neildonnelly.net/" target="_blank">Neil Donnelly</a>, <a href="https://www.youtube.com/watch?v=KxNTkKTJaCk" target="_blank">Julia Born</a></p>
@@ -140,6 +145,7 @@
                             <div id="button" class="button inactive-button"></div>
                         </div>
                         <div class="class-info due note"><p>Portfolio Peer Review </p></div>
+                        <div class="class-info due note"><p>Resume Critique at 7pm, 20 Washington Pl.</p></div>
                         <div class="class-info hide">
                         </div>
                     </div>
