--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -57,10 +57,11 @@
                         </div>
                         <div class="class-info hide">
                             <div>
-                                <p class="to-do"><br>– Review Exercises 1 and 2<br>– Layout Lecture<br>
+                                <p class="to-do"><br>– Review Exercises 1 and 2<br>
+                                    <a href="https://drive.google.com/file/d/1MNhMDr-1ZWAjl5v0QJCrx8RR4XctvRJj/view?usp=drive_link" target="_blank"> Layout Lecture</a><br>
                                     <a href="https://drive.google.com/file/d/11MoAvWsZd_RTcmjdOFPrV5tjqWqVxcG3/view?usp=drive_link" target="_blank">– Typesetting Exercise</a>
                                     <br>– Poster Deconstruction<br>– INDD Tutorial: Basic Layout, Grids, Master Pages, Columns <br>– Introduce HW: Contact Sheet</p>
-                                <p><span class="due">Due Today: Exercises 1 and 2</span></p>
+                                <p><span class="due">Due Today: Exercises Type Pairing, Hierarchy Posters, and Poster Deconstruction</span></p>
                                 <p><span class="homework">Homework:<br><a href="https://drive.google.com/file/d/1hzCADGDpG7E94N-h3EXRNVgIAac4Ib4g/view?usp=drive_link" target="_blank">(1) Contact Sheet</a><br><a href="https://drive.google.com/file/d/11MoAvWsZd_RTcmjdOFPrV5tjqWqVxcG3/view?usp=drive_link" target="_blank">(2) Typesetting Exercise</a><br> (3) Start gathering your resume text!</span></p>
                                 <p class="dd">Daily Designers (Book Designers): <a href="https://www.joostgrootens.nl/" target="_blank">Joost Grootens</a>, <a href="https://neildonnelly.net/" target="_blank">Neil Donnelly</a>, <a href="https://www.youtube.com/watch?v=KxNTkKTJaCk" target="_blank">Julia Born</a></p>
                             </div>
