--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -58,7 +58,7 @@
                         <div class="class-info hide">
                             <div>
                                 <p class="to-do"><br>– Review Exercises 1 and 2<br>
-                                    <a href="https://drive.google.com/file/d/1MNhMDr-1ZWAjl5v0QJCrx8RR4XctvRJj/view?usp=drive_link" target="_blank"> Layout Lecture</a><br>
+                                    <a href="https://drive.google.com/file/d/1MNhMDr-1ZWAjl5v0QJCrx8RR4XctvRJj/view?usp=drive_link" target="_blank">– Layout Lecture</a><br>
                                     <a href="https://drive.google.com/file/d/11MoAvWsZd_RTcmjdOFPrV5tjqWqVxcG3/view?usp=drive_link" target="_blank">– Typesetting Exercise</a>
                                     <br>– Poster Deconstruction<br>– INDD Tutorial: Basic Layout, Grids, Master Pages, Columns <br>– Introduce HW: Contact Sheet</p>
                                 <p><span class="due">Due Today: Exercises Type Pairing, Hierarchy Posters, and Poster Deconstruction</span></p>
