--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -78,7 +78,7 @@
                             <div>
                                 <p class="to-do">– Books Lecture<br>– 1:1 Contact Sheet Walkthrough</p>
                                 <p><span class="due">Due Today: Contact Sheet & Typesetting Exercise<br> </span></p>
-                                <p><span class="homework">Homework: <br>(1) <a href="https://drive.google.com/file/d/1vXnnffIz7sYDPh3AwLrTzNaBve3hHYb0/view?usp=sharing" target="_blank">3 Design Directions</a><br>(2) <a href="https://drive.google.com/file/d/1RUzPdgbBTQZicXNZhsTOrypvIICY9aTN/view?usp=share_link" target="_blank">Book Map</a><br> (3) <a href="https://drive.google.com/file/d/1r9yIfD-c5fvXZNgMaSruHfyu8q5RJJtV/view?usp=share_link" target="_blank">Inspiration / Mood Board</a><br></span></p>
+                                <p><span class="homework">Homework: <br>(1) Mood Board<br>(2) <a href="https://drive.google.com/drive/folders/1YbQTIi4ehhkj7Qq7ukcZN2H9qdlHULJi?usp=drive_link" target="_blank">Book Map</a><br> (3) 3 Design Directions<br></span></p>
                                 <p class="dd">Daily Designers: <a href="https://www.juliahasting.com/" target="_blank">Julia Hasting</a> at <a href="https://www.phaidon.com/store/architecture/" target="_blank">Phaidon</a>, <a href="https://bendenzer.com/Book-Covers" target="_blank">Ben Denzer</a>, <a href="https://www.petermendelsund.com/covers" target="_blank">Peter Mendelsund</a>, <a href="https://www.versobooks.com/" target="_blank">Verso Books</a></p>
                             </div>
                         </div>
