books lecture update

--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -76,7 +76,7 @@
                         </div>
                         <div class="class-info hide">
                             <div>
-                                <p class="to-do">– Books Lecture<br>– 1:1 Contact Sheet Walkthrough</p>
+                                <p class="to-do"><a href="https://drive.google.com/file/d/1SxAGzJGdHWlPy_qYcVNz3yqAkhg9UV7q/view?usp=drive_link" target="_blank">– Books Lecture</a><br>– 1:1 Contact Sheet Walkthrough</p>
                                 <p><span class="due">Due Today: Contact Sheet & Typesetting Exercise<br> </span></p>
                                 <p><span class="homework">Homework: <br>(1) Mood Board<br>(2) <a href="https://drive.google.com/drive/folders/1YbQTIi4ehhkj7Qq7ukcZN2H9qdlHULJi?usp=drive_link" target="_blank">Book Map</a><br> (3) 3 Design Directions<br></span></p>
                                 <p class="dd">Daily Designers: <a href="https://www.juliahasting.com/" target="_blank">Julia Hasting</a> at <a href="https://www.phaidon.com/store/architecture/" target="_blank">Phaidon</a>, <a href="https://bendenzer.com/Book-Covers" target="_blank">Ben Denzer</a>, <a href="https://www.petermendelsund.com/covers" target="_blank">Peter Mendelsund</a>, <a href="https://www.versobooks.com/" target="_blank">Verso Books</a></p>
