Brief Update to Class 7

--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -146,7 +146,7 @@
                             <div>        
                                 <p class="to-do">– Individual Meetings</p>
                                 <p><span class="due">Due Today: Make Refinements to your Layouts and Graphic System</span></p>
-                                <p><span class="homework">Homework: <br> - FULL PORTFOLIO DRAFT <br> - Flush out your projects and layouts before Monday in preparation for the guest crit!
+                                <p><span class="homework">Homework: <br> - FULL PORTFOLIO DRAFT <br> - Flush out your projects and layouts before Monday in preparation for the guest crit! <br> - Prepare to talk about your work for Monday
                                 <p class="dd">Daily Designers (UK Type): <a href="https://pleasedonotbend.co.uk/" target="_blank">Fraser Muggeridge</a>, <a href="https://morganstudio.co.uk/" target="_blank">John Morgan</a>, <a href="https://www.ok-rm.co.uk/" target="_blank">OK-RM</a></p>
                             </div>
                         </div>
