--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -176,12 +176,13 @@
                             <div class="class-no"><h3>Class 9</h3></div>
                             <div id="button" class="button inactive-button"></div>
                         </div>
+                        <div class="class-info due note"><p>CLASS WILL START AT 2:00pm SHARP</p></div>
                         <div class="class-info due note"><p>Resume Critique at 7pm, 20 Washington Pl.</p></div>
                         <div class="class-info hide">
                             <div>        
-                                <p class="to-do">– Book Printing, Covers, Mixam</p>
+                                <p class="to-do">– Book Printing, Binding, Covers, Mixam</p>
                                 <p><span class="due">Due Today: Refinements based on crit feedback</span></p>
-                                <p><span class="homework">Homework: <br> - 3 Cover Design Concepts <br> - Refinements to Portfolio Layout
+                                <p><span class="homework">Homework: <br> - 3 Cover Design Concepts <br> - Refinements to Portfolio Layout <br> - get all your projects into your pages!!
                                 <p class="dd">Daily Designers (Graphic Design and Film): <a href="https://mikemillsmikemills.com/" target="_blank">Mike Mills</a> (made <a href="https://www.youtube.com/watch?v=DuyN_0KsO98" target="_blank">Beginners</a>, 20th Century Women, and C'mon C'mon), <a href="https://www.youtube.com/watch?v=kaDQlyXilSw" target="_blank">Charles and Ray Eames</a>, <a href="https://www.youtube.com/watch?v=FNSlQ9mmJ4M" target="_blank">Abbas Kiarostami</a></p>
                             </div>
                         </div>
