--- a/Intar_24/index.html
+++ b/Intar_24/index.html
@@ -180,7 +180,8 @@
                         <div class="class-info due note"><p>Resume Critique at 7pm, 20 Washington Pl.</p></div>
                         <div class="class-info hide">
                             <div>        
-                                <p class="to-do">– Book Printing, Binding, Covers, Mixam</p>
+                                <p class="to-do">– <a href="https://docs.google.com/presentation/d/13D2H_fdQELgvtsbbBXiaT5kCzJ1va-q4h3alYvAmuQQ/edit?usp=sharing" target="_blank">Book binding</a> 
+                                    <br>– <a href="https://drive.google.com/file/d/1wc3GNfYOFsVNHmcP1TrPqXsY3de9tFAd/view?usp=drive_link" target="_blank">Debrief on Guest Critic Feedback, Discuss Covers</a>  <br> – Mixam overview</p>
                                 <p><span class="due">Due Today: Refinements based on crit feedback</span></p>
                                 <p><span class="homework">Homework: <br> - 2 Cover Design Concepts <br> - Refinements to Portfolio Layout <br> - get all your projects into your pages!!
                                 <p class="dd">Daily Designers (Graphic Design and Film): <a href="https://mikemillsmikemills.com/" target="_blank">Mike Mills</a> (made <a href="https://www.youtube.com/watch?v=DuyN_0KsO98" target="_blank">Beginners</a>, 20th Century Women, and C'mon C'mon), <a href="https://www.youtube.com/watch?v=kaDQlyXilSw" target="_blank">Charles and Ray Eames</a>, <a href="https://www.youtube.com/watch?v=FNSlQ9mmJ4M" target="_blank">Abbas Kiarostami</a></p>
