--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <br>
       <hr style="color:black">
      <h2>Project 3: <br></h2>
-     <h3><a href="World_Peace/index.html"> Is World Peace Possible?</a></h3>
+     <h3><a href="World_Peace/Index.html"> Is World Peace Possible?</a></h3>
      <br>
      <hr style="color:black">    
      <h2>IntAr WS24: <br></h2>
