--- a/World_Peace/Index.html
+++ b/World_Peace/Index.html
@@ -24,7 +24,7 @@
                 width: 100vw;
                 height: 3%;
                 font-family: TRJNDaVinci-Display;
-                font-size: 1em;
+                font-size: 1.5em;
                 color: white;
                 z-index: 5;
             }
@@ -71,9 +71,9 @@
         <script src="worldPeace.js"></script>
         
         <div class="top-space">
-            1. Set up a strategy for spreading peace (be generous!)
+            1. Click within page to set up a strategy for spreading peace (be generous!)
             <br>
-            2. Press Enter to play & pause
+            2. Press 'Enter' to see how far peace spreads
         </div>
         
         <div class="left-side"> 
