--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             margin-top: 0;
             margin: 0;
             color: black;
-            font-size: 6em; 
+            font-size: 3em; 
             font-family: 'Bricolage Grotesque', sans-serif;
         }
         
@@ -82,16 +82,19 @@
    
     <marquee><h1>hello world, it's brooke</h1></marquee>
     <hr style="color:black">
-
-      <h2>Project 2: <br></h2>
+    <h2>Creative Coding <br></h2>
+    <h3><a href="Knit/index.html"> Is This Liberty?</a></h3>
+    <br>
+    <hr style="color:black">
+    <h2>Creative Coding <br></h2>
       <h3><a href="Monarch/index.html"> Monarch Migration</a></h3>
       <br>
       <hr style="color:black">
-     <h2>Project 3: <br></h2>
+     <h2>Creative Coding <br></h2>
      <h3><a href="World_Peace/Index.html"> Is World Peace Possible?</a></h3>
      <br>
      <hr style="color:black">    
-     <h2>IntAr WS24: <br></h2>
+     <h2>Interior Architecture Wintersession Class Website <br></h2>
      <h3><a href="Intar_24/index.html"> IntAr Wintersession '24</a></h3>
      
   </body>
