--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <marquee><h1>hello world, it's brooke</h1></marquee>
     <hr style="color:black">
     <h2>Creative Coding <br></h2>
-    <h3><a href="Knit/index.html"> Is This Liberty?</a></h3>
+    <h3><a href="Knit/Index.html"> Is This Liberty?</a></h3>
     <br>
     <hr style="color:black">
     <h2>Creative Coding <br></h2>
