--- a/Monarch/index.html
+++ b/Monarch/index.html
@@ -69,6 +69,7 @@
           width: 60vw;
           font-family: "mr-eaves-xl-modern", sans-serif;
           font-weight: 300;
+          text-align: center;
           font-style: normal;
           font-size: 2vw;
           opacity: 0;
@@ -80,6 +81,7 @@
           width: 60vw;
           font-family: "mr-eaves-xl-modern", sans-serif;
           font-weight: 300;
+          text-align: center;
           font-style: normal;
           font-size: 2vw;
           opacity: 0;
@@ -92,36 +94,13 @@
           width: 55vw;
           font-family: "mr-eaves-xl-modern", sans-serif;
           font-weight: 300;
-          font-style: normal;
-          font-size: 2vw;
-          opacity: 0;
-          transition: opacity 1s;
-        }
-
-        .paragraph4 {
-          position: absolute;
-          color: #F4EEE5;
-          width: 55vw;
-          font-family: "mr-eaves-xl-modern", sans-serif;
-          font-weight: 300;
-          font-style: normal;
-          font-size: 2vw;
-          opacity: 0;
-          transition: opacity 1s;
-        }
-
-        .paragraph5 {
-          position: absolute;
-          color: #F4EEE5;
-          width: 60vw;
           text-align: center;
-          font-family: "mrs-eaves-xl-serif", serif;
-          font-weight: 400;
-          font-style: italic;
+          font-style: normal;
           font-size: 2vw;
           opacity: 0;
           transition: opacity 1s;
         }
+
 
         .heading {
           position: absolute;
@@ -211,23 +190,20 @@
         The Great Monarch Migration
   		</p>
   		<p class="paragraph1">
-        The monarch butterfly <span id="p3">(Danaus Plexippus)</span> conducts the longest annual, regularly repeated migration among all insects. It inherits the genetic behavioral program that enables this wondrous migration.
+        The monarch butterfly <span id="p3">(Danaus Plexippus)</span> conducts the longest annual, regularly repeated migration among all insects. It inherits the genetic behavioral program that enables this wondrous migration. 
+        Year over year, their sophisticated orientation and positioning mechanisms allow the off-spring four to six generations later to arrive at the exact same tree where its ancestor arrived the previous year.
   		</p>
   		<p class="paragraph2">
-        Year over year, their sophisticated orientation and positioning mechanisms allow the off-spring four to six generations later to arrive at the exact same tree where its ancestor arrived the previous year.
+        During its annual cycle, the monarch resides between Mexico, the United States of America and Canada. There is no other case in the world in which butterflies travel <span id="p3">over 4,500 kilometers</span> to arrive at the same site each year.
         		</p>
   		<p class="paragraph3">
-        During its annual cycle, the monarch resides between Mexico, the United States of America and Canada. There is no other case in the world in which butterflies travel <span id="p3">over 4,500 kilometers</span> to arrive at the same site each year.
-      </p>
-      <p class="paragraph4">
         During the winter months, a population of between 200 millions and one billion monarchs concentrate in a small, alpine Oyamel Fir forest in central Mexico—
-  		</p>
-      <p class="paragraph5">
-        the Monarch Butterfly Biosphere.
+        <br><br> <span id="p3">the Monarch Butterfly Biosphere.</span>
       </p>
+
 
   	</div>
-
+    
 <script>
 
     let body = document.querySelector('body');
@@ -268,32 +244,8 @@
         let elmnt = document.querySelector('.paragraph2');
         elmnt.style.opacity = 0;
         body.removeEventListener('click', hideParagraph2);
-        body.addEventListener('click', hideParagraph3);
-    }
-    function showParagraph4() {
-        let elmnt = document.querySelector('.paragraph4');
-        elmnt.style.opacity = 1;
-        body.removeEventListener('click', showParagraph4);
-        body.addEventListener('click', showParagraph5);
-    }
-    function hideParagraph3() {
-        let elmnt = document.querySelector('.paragraph3');
-        elmnt.style.opacity = 0;
-        body.removeEventListener('click', hideParagraph3);
-        body.addEventListener('click', hideParagraph4);
-    }
-    function showParagraph5() {
-        let elmnt = document.querySelector('.paragraph5');
-        elmnt.style.opacity = 1;
-        body.removeEventListener('click', showParagraph5);
         body.addEventListener('click', hideAll);
     }
-    function hideParagraph4() {
-        let elmnt = document.querySelector('.paragraph4');
-        elmnt.style.opacity = 0;
-        body.removeEventListener('click', hideParagraph4);
-    }
-
     function hideAll() {
         let elmnt = document.querySelector('.container1');
         elmnt.style.opacity = 0;
@@ -354,9 +306,10 @@
           </div>
         </div>
 
-
+        
     <div class="oval-container">
       <div class="seasonal-background">
+        <img src="map2.png" alt="migration map">
         </div>
       </div>
 
