--- a/Knit/Index.html
+++ b/Knit/Index.html
@@ -236,7 +236,7 @@
 
     <div class=header>
         <button class="button01" onclick="togglePopOut()">i</button>
-        <button type=button onclick="window.location.href='draw.html'">draw</button>
+        <button type=button onclick="window.location.href='Draw.html'">draw</button>
     </div>
 
     <script>
