--- a/Knit/Draw.html
+++ b/Knit/Draw.html
@@ -106,7 +106,7 @@
     <div class="slider-container">
         <div class="slider">
           <div class="slider-title">
-            <button id="button-01" onclick="window.location.href='index.html'">home</button>
+            <button id="button-01" onclick="window.location.href='Index.html'">home</button>
             <p>grid size: <span id="gridSizeValue">45</span></p>
           </div>
           <input type="range" min="10" max="200" value="45" class="slider" id="gridSizeSlider"> 
