--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <br>
       <hr style="color:black">    
       <h2>Signage System & Psychogeography Website <br></h2>
-      <h3><a href="Drift/Index_Clean.html"> Drift</a></h3>
+      <h3><a href="Drift/index.html"> Drift</a></h3>
       
       <br>
       <hr style="color:black">
