--- a/Drift/index.html
+++ b/Drift/index.html
@@ -22,17 +22,18 @@
       <button class="button01" onclick="togglePopOut()">INFO</button>
       <div class="pop-out" id="popOutWindow">
         <div class="pop-header"> 
-            <h1>DRIFT</h1>
             <button class="close" onclick="togglePopOut()">X</button>
         </div>
         <p class="pop-text">
-          Pulling from early ideas of psychogeography, this series of encounters suggests a new way of moving about the urban landscape. An alternative to the mindless transition from point A to point B, the theory of drift suggests an attunement to your surroundings; an awareness to the atmosphere of 'place' and your experience while moving within it. 
-          <br> <br> 
-          As a kind of walking meditation, the practice of psychogeography asks us to disrupt the efficiencies of modern life to discover new ways of experiencing the city and it's underlying structure. Hidden gems will be found. New thoughts will arise. Chance encounters will present themselves. Go on, drift. 
+          PULLING FROM EARLY IDEAS OF PSYCHOGEOGRAPHY, THIS SERIES OF ENCOUNTERS SUGGESTS A NEW WAY OF MOVING ABOUT THE URBAN LANDSCAPE. AN ALTERNATIVE TO THE MINDLESS TRANSITION FROM POINT A TO POINT B, THE THEORY OF DRIFT SUGGESTS AN ATTUNEMENT TO YOUR SURROUNDINGS; AN AWARENESS TO THE ATMOSPHERE OF 'PLACE' AND YOUR EXPERIENCE WHILE MOVING WITHIN IT.
+           <br> <br> 
+          AS A KIND OF WALKING MEDITATION, THE PRACTICE OF PSYCHOGEOGRAPHY ASKS US TO DISRUPT THE EFFICIENCIES OF MODERN LIFE TO DISCOVER NEW WAYS OF EXPERIENCING THE CITY AND IT'S UNDERLYING STRUCTURE. HIDDEN GEMS WILL BE FOUND. NEW THOUGHTS WILL ARISE. CHANCE ENCOUNTERS WILL PRESENT THEMSELVES. GO ON, DRIFT.
+
         </p>
       </div>
     </div>
     <div id="map"></div>
+  </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVTZH_Zg7s774-sJwl75TJrhBryyw9rQc&callback=initMap" defer></script>
   </body>
 </html>
