--- a/Knit/Index.html
+++ b/Knit/Index.html
@@ -141,7 +141,7 @@
 
         /* Handle */
         ::-webkit-scrollbar-thumb {
-        background: rgb(229, 255, 0);
+        background: '#0af7a2';
         border-radius: 10px;
         }
 
