--- a/Intar_WS25/index.html
+++ b/Intar_WS25/index.html
@@ -80,7 +80,6 @@
                                 <p class="to-do">
                                     – Share Heirarchy and Composition Exercises<br>    
                                 <a href="https://drive.google.com/file/d/1WRGBDZxoiYzo4H5yfrmEnKH8kr6Yviik/view?usp=drive_link" target="_blank">– Books Lecture</a><br>
-                                <a href="https://docs.google.com/presentation/d/13D2H_fdQELgvtsbbBXiaT5kCzJ1va-q4h3alYvAmuQQ/edit?usp=drive_link" target="_blank">– Book Binding</a><br>
                                 <a href="https://docs.google.com/spreadsheets/d/1Q36-1vhmp40b9ulQYVrxiDkfb2fziH5U5LGlmm8Btek/edit?usp=drive_link" target="_blank">– 1:1 Contact Sheet Walkthrough</a></p>
                                 <p><span class="due">Due Today: Contact Sheet & Hierarchy & Composition Exercise<br></span></p>
                                 <p><span class="homework">Homework: <br>(1) Mood Board<br>(2) <a href="https://drive.google.com/drive/folders/1YbQTIi4ehhkj7Qq7ukcZN2H9qdlHULJi?usp=drive_link" target="_blank">Book Map</a><br> (3) 3 Design Directions<br></span></p>
@@ -99,12 +98,13 @@
                         <div class="class-info due note"><p>Presentation by Susan Andersen from the Career Center (3PM)</p></div>
                         <div class="class-info hide">
                             <div>
-                                <p class="to-do">– Review Mood Boards & Concepts
-                                    <br>– Intro to Grids
-                                    <br>– Book Binding & Resources
-                                    <br>– Susan Andersen Presentation
-                                    <br>– Resume and Cover Letter Introduction</p>
-                                <p><span class="due">Due Today: Mood Board, Book Map, & Three Portfolio Directions</span></p>
+                                <p class="to-do">
+                                    – Intro to Grids<br>
+                                    <a href="https://docs.google.com/presentation/d/13D2H_fdQELgvtsbbBXiaT5kCzJ1va-q4h3alYvAmuQQ/edit?usp=drive_link" target="_blank">– Book Binding</a><br>
+                                    <a href="https://drive.google.com/file/d/1fPnelLv5AG8sxRGDIbhcR5CJuhYZWH8a/view?usp=drive_link" target="_blank"> – Resume and Cover Letter Introduction</a><br>
+                                    – Susan Andersen Presentation <br>
+                                    – Review Mood Boards & Concepts</p>
+                                    <p><span class="due">Due Today: Mood Board, Book Map, & Three Portfolio Directions</span></p>
                                 <p><span class="homework">Homework: <br> - Draft Resume & Cover Letter<br> - Finalize Book Map <br> - Refine Three Design Directions
                                  <p class="dd">Daily Designers (RISD GD Thesis): <br>–<a href="https://digitalcommons.risd.edu/cgi/viewcontent.cgi?article=2321&context=masterstheses" target="_blank">Kaela Kennedy</a>
                                     <br>–<a href="https://digitalcommons.risd.edu/cgi/viewcontent.cgi?article=2314&context=masterstheses" target="_blank">Glikeriya Shotanova</a>
