--- a/Intar_WS25/index.html
+++ b/Intar_WS25/index.html
@@ -124,7 +124,9 @@
                         </div>
                         <div class="class-info hide">
                             <div>
-                                <p class="to-do">– Demo image Sizes, batch editing, etc.<br>– Individual Meetings</p>
+                                <p class="to-do">– Demo image Sizes, batch editing, etc.<br>– Individual Meetings 
+                                <br> – Take <a href="https://docs.google.com/forms/d/e/1FAIpQLScM5HThRJ3qhcYdltmm9EeXpYIDsmI6e5pKAD8gF1SihfycDQ/viewform?usp=sharing" target="_blank">Website Portfolio Survey</a> 
+                                </p>
                                 <p><span class="due">Due Today: Three Concept Directions</span></p>
                                 <p><span class="homework">Homework: <br> - Resumes/Cover Letters (Print for Tuesday)<br> - Work on full layout (placeholder text and captions is OK) <br> - Print your progress, bring into class!
                                 <br>– Read <a href="https://drive.google.com/file/d/1NU9kyUdPrgxtSryElxE3TCvIxUSNdQoL/view?usp=drive_link" target="_blank">"Thinking with Type" by Ellen Lupton</a>
