--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
      <br>
      <hr style="color:black">    
      <h2>Interior Architecture Wintersession Class Website <br></h2>
-     <h3><a href="Intar_24/index.html"> IntAr Wintersession '24</a></h3>
+     <h3><a href="Intar_WS25/index.html"> IntAr Wintersession</a></h3>
      
   </body>
 </html>
