--- a/Intar_WS25/index.html
+++ b/Intar_WS25/index.html
@@ -180,7 +180,7 @@
                         
                         <div class="class-info hide">
                             <div>        
-                                <p class="to-do">– Guest Critics from NBBJ (CLASS ON ZOOM)</p>
+                                <p class="to-do">– <a href="https://docs.google.com/spreadsheets/d/16HhWHwhOYJyVJaTE3ZKgytRLEvBBcKBUzlHlxFMpn2M/edit?usp=sharing" target="_blank"> Guest Critics from NBBJ (CLASS ON ZOOM)</a></p>
                                 <p><span class="due">Due Today: Full Portfolio First Draft</span></p>
                                 <p><span class="homework">Homework: <br> - Start making edits based on crit feedback <br> - Work on Resume & Cover Letters
                                 <p class="dd">Daily Designers (Exhibition and Experience Design): <br> <a href="https://domecollective.com/" target="_blank">Dome Collective</a>, <a href="https://2x4.org/" target="_blank">2 x 4</a>, <a href="https://isometricstudio.com/" target="_blank">Isometric Studio</a></p>
