--- a/Intar_WS25/index.html
+++ b/Intar_WS25/index.html
@@ -308,6 +308,7 @@
                         <h2>Class Docs and Presentations</h2>
                         <ul>
                             <li><a href="https://drive.google.com/file/d/1GlQUFyDUwBatOFbm9gqOU8r0KnsHb0oQ/view?usp=drive_link" target="_blank">Recommended File Structure</a></li>
+                            <li><a href="https://drive.google.com/file/d/1yqdCVLUA5rC862VlwzRHTwVtT0SmBw23/view?usp=sharing" target="_blank">Booklet Printing</a></li>
                             <li><a href="https://drive.google.com/drive/folders/1cy5hQmhVT-yPvEHYiWTNSUM_detLl_RC?usp=drive_link" target="_blank">Selection of Portfolios from Previous Years</a></li>
                             <li><a href="https://drive.google.com/drive/folders/1aAniUr7HATsZkAFrcDzipP8dveV5HOJN?usp=drive_link" target="_blank">Homework Folder</a></li>
                             <span class="inactive">
