--- a/Intar_WS25/index.html
+++ b/Intar_WS25/index.html
@@ -212,7 +212,7 @@
                         </div>
                         <div class="class-info hide">
                             <div>        
-                                <p class="to-do"><br>– 1:1 reviews </p>
+                                <p class="to-do">– 1:1 reviews </p>
                                 <p><span class="due">Due Today: Cover Letter, Resume</span></p>
                                 <p><span class="homework">Homework: <br> - Cover Letter Content Finalized <br> - Continue Portfolio Refinements!</span></p>
                             </div>
